--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bignumber.js": "^9.0.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "sweetalert2": "^10.15.5",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4"
   },
