--- a/truffle_contracts/package.json
+++ b/truffle_contracts/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.0",
     "@truffle/hdwallet-provider": "^1.2.2"
+  },
+  "devDependencies": {
+    "truffle-plugin-verify": "^0.5.6"
   }
 }
